# Smart-Gripper-ROS-Based-Pick-and-Place-System-with-Computer-Vision_Report

./: README.md
CAD_solidworks/: link_4.SLDPRT  link_4.STL  ~$robot_arm_description.SLDASM
CAD_solidworks/assembly files/: base_link.SLDASM  link_2.SLDASM
CAD_solidworks/part file/: Mirrorlink_5.SLDPRT  base_link.SLDPRT  link_2.SLDPRT  link_3.SLDPRT  link_4.SLDPRT  link_5.SLDPRT
CAD_solidworks/robot_arm_description/: CMakeLists.txt  package.xml
CAD_solidworks/robot_arm_description/launch/: display.launch  gazebo.launch
CAD_solidworks/robot_arm_description/meshes/: base_link.STL  link_3.STL  link_4.STL  link_5.STL
CAD_solidworks/robot_arm_description/urdf/: robot_arm_description.csv  robot_arm_description.urdf
camera_ws/: squares_config.json
camera_ws/calib_images/: calibration_data.npz  pixel_to_mm.py  undistort_camera.py
camera_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
camera_ws/install/camera_1/lib/camera_1/: camera_1  check_1  check_2  check_3  check_4  detect_aruco  generate_aruco  map_objects
camera_ws/install/camera_1/share/camera_1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
camera_ws/log/: latest_build
camera_ws/src/camera_1/: package.xml  setup.cfg  setup.py
camera_ws/src/camera_1/camera_1/: check_1.py  check_3.py  check_4.py  detect_aruco.py
camera_ws/src/camera_1/resource/: squares_config.json
robot/: README.txt  frames_2025-04-15_12.21.40.gv  frames_2025-04-15_12.21.51.gv  verified_coordinates.json
robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot/install/moveit3/share/moveit3/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot/install/moveit_scripts/lib/moveit_scripts/: action_server
robot/install/moveit_scripts/share/moveit_scripts/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot/install/robot_arm_controller/share/robot_arm_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
robot/log/: latest_build
robot/moveit3/: .setup_assistant  CMakeLists.txt  package.xml
robot/moveit3/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot_arm_description.ros2_control.xacro  robot_arm_description.srdf  robot_arm_description.urdf.xacro  ros2_controllers.yaml
robot/moveit3/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot/moveit_scripts/: CMakeLists.txt  package.xml
robot/moveit_scripts/src/: action_server.cpp
robot/robot_arm_controller/: CMakeLists.txt  package.xml
robot/robot_arm_controller/config/: robot_arm_controllers.yaml
robot/robot_arm_controller/launch/: controller.launch.py
robot/robot_arm_description/: CMakeLists.txt  package.xml
robot/robot_arm_description/launch/: display.launch.py  display.launch.xml  gazebo.launch.py
robot/robot_arm_description/meshes/: dummy_link.STL  link_2.STL  link_4.STL  link_6.STL
robot/robot_arm_description/rviz/: robot_arm_rviz.rviz
robot/robot_arm_description/urdf/: robot_arm.urdf  robot_arm.urdf.xacro  robot_arm_control.xacro  robot_arm_gazebo.xacro
robot/robot_bringup/: package.xml  setup.py
robot/robot_bringup/launch/: bringup.launch.py
robot/robot_utils/: package.xml  setup.py
robot/robot_utils/robot_utils/: robotic_arm_pick_place_node.py  send_position_command.py
(+78 files in other folders)
